--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -18,9 +18,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
-    <script src="http://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
-    <script src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
-    <script src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
+    <script src="https://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
+    <script src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
+    <script src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
 </head>
 
 <body class="parallax">
@@ -29,14 +29,14 @@
         <!-- Nav Section sans container -->
         <div id="navbar" class="navbar navbar-fixed-top headroom" role="banner">
             <div class="">
-                <a class="navbar-brand" href="http://www.joeldombek.com/">JOEL<strong>DOMBEK</strong></a>
+                <a class="navbar-brand" href="https://www.joeldombek.com/">JOEL<strong>DOMBEK</strong></a>
                 <nav class="navbar-responsive-collapse">
                     <ul class="nav navbar-nav pull-right" role="navigation">
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="#">Work</a>
                             <ul class="dropdown-menu">
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/work/">All</a>
+                                    <a href="https://www.joeldombek.com/work/">All</a>
                                 </li>
                                 <li class=""><a href="#">Brand</a></li>
                                 <li class=""><a href="#">Web</a></li>
@@ -50,10 +50,10 @@
                             <ul class="dropdown-menu">
                                 <li class=""><a href="#">Quotes</a></li>
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/ideas/inspiration/">Inspiration</a>
+                                    <a href="https://www.joeldombek.com/ideas/inspiration/">Inspiration</a>
                                 </li>
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/blog/">Blog</a>
+                                    <a href="https://www.joeldombek.com/blog/">Blog</a>
                                 </li>
                             </ul>
                         </li>
@@ -65,7 +65,7 @@
                                   <a id="nav-search" href="#"><i class="material-icons">search</i></a>
                               </li> -->
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/about/">About</a>
+                                    <a href="https://www.joeldombek.com/about/">About</a>
                                 </li>
                                 <li class=""><a href="#">How I Work</a></li>
                                 <li class=""><a href="#">Annual Report</a></li>
@@ -73,7 +73,7 @@
                                     <a href="https://joeldom.github.io/resume/">Resume</a>
                                 </li>
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/contact/">Contact</a>
+                                    <a href="https://www.joeldombek.com/contact/">Contact</a>
                                 </li>
                             </ul>
                         </li>
@@ -82,7 +82,7 @@
                 <button type="button" class="navbar-toggle">
             <!-- <span href="#menu" class="trinav"></span> -->
             <span href="#menu" class="ventnav">
-              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+              <svg xmlns="https://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
               <path d="M7.77636 0.797607V8.53684H0.0371094L7.77636 0.797607Z" fill="#C5C5C5"/>
               <path d="M7.77636 9.42798V17.1672H0.0371094L7.77636 9.42798Z" fill="#C5C5C5"/>
               <path d="M7.77636 18.0583V25.7976H0.0371094L7.77636 18.0583Z" fill="#C5C5C5"/>
@@ -119,7 +119,7 @@
                     <section class="tile-splash first">
                         <a href="https://www.joeldombek.com/">
                             <p>JOEL<strong>DOMBEK</strong> /名前
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="red" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class=""><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="red" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class=""><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -132,8 +132,8 @@
                 <div class="col-xs-12 col-sm-8 col-md-4">
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/">
-                            <p>SITE /地点 <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            <p>SITE / <span id="site-term-container" style="">...</span> <span class="tile-detail">v2.1.23</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -146,8 +146,8 @@
                 <div class="col-xs-12 col-sm-8 col-md-4">
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/resume/">
-                            <p>RESUME /履歴書 <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            <p>RESUME / <span id="resume-term-container" style="">...</span> <span class="tile-detail">v2.1.23</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -160,8 +160,8 @@
                 <div class="col-xs-12 col-sm-8 col-md-4">
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/style-guide/">
-                            <p>STYLE GUIDE /履歴書 <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            <p>STYLE GUIDE / <span id="styleguide-term-container" style="">...</span> <span class="tile-detail">v2.1.23</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -175,8 +175,8 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/beyond/">
                             <p>
-                                SANDBOX /遊び場 <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
-                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                                SANDBOX / <span id="sandbox-term-container" style="">...</span> <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true"
+                                    width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -192,7 +192,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/sandbox/">
                             <p>
-                                project: catalyst <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: catalyst <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
@@ -209,7 +209,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/beyond/">
                             <p>
-                                project: ECCO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: ECCO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                             <!-- <img src="img/Parallax_Example.png" /> -->
@@ -227,7 +227,7 @@
                     <section class="tile-splash tile-last">
                         <a href="https://joeldom.github.io/redesign/sandbox/layers">
                             <p>
-                                project: layer.EXE <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: layer.EXE <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                             <!-- <img src="img/Parallax_Example.png" /> -->
@@ -245,7 +245,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/sandbox/absolute">
                             <p>
-                                project: ABSO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: ABSO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                             <!-- <img src="img/Parallax_Example.png" /> -->
@@ -286,7 +286,7 @@
                 <footer class="footer" itemscope="" itemtype="https://schema.org/Organization">
                     <span id="back-top">
                       <a href="#top">
-                        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#FFF" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" transform="rotate(-90)" class="inline">
+                        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#FFF" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" transform="rotate(-90)" class="inline">
                           <path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
                         </svg>
                       </a>
@@ -357,6 +357,7 @@
     <script src="https://joeldom.github.io/redesign/greybox/js/main.js"></script>
     <!-- <script src="../greybox/js/main.js"></script> -->
     <script src="../js/sandbox.js"></script>
+    <script src="../js/keyShuffle.js"></script>
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 
     <!-- BASE Google tag (gtag.js) -->
