--- a/beyond/index.html
+++ b/beyond/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
-
-<html lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
-<!--<![endif]-->
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta property="og:title" content="My Title" />
+    <meta property="og:image" content="URL to the image you want in the preview, LinkedIn recommends a 1.91:1 ratio (1200x627px)" />
+    <meta property="og:description" content="This should be a very short description" />
+    <meta name="twitter:card" content="summary || summary_large_image || player || app" />
+    <meta name="twitter:creator" content="@joeldombek" />
+
     <title>COMA 12.18</title>
 
     <link rel="stylesheet" href="https://joeldom.github.io/redesign/greybox/css/coma.css">
