--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
               >
                 <div class="article-inner">
                   <h3 class="cat">Products</h3>
-                  <h2>Digita; product design examples from various industries.</h2>
+                  <h2>Digital product design examples from various industries.</h2>
                 </div>
               </a>
             </article>
