--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!-- TODO
+    [] add <- back to top page
+    [] remove links in top nav
+    [] remove redundant tiles
+    [] have text "write" instead of appear
+    [] have "Go Back" use .js onclick="history.back()"
+ -->
 
 <head>
     <meta charset="UTF-8" />
@@ -29,7 +36,11 @@
         <!-- Nav Section sans container -->
         <div id="navbar" class="navbar navbar-fixed-top headroom" role="banner">
             <div class="">
-                <a class="navbar-brand" href="https://www.joeldombek.com/">JOEL<strong>DOMBEK</strong></a>
+                <!-- <a class="navbar-brand" href="https://www.joeldombek.com/">JOEL<strong>DOMBEK</strong></a> -->
+                <a class="navbar-brand" href="https://joeldom.github.io/redesign/">
+                    <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="14" viewBox="0 0 20 20" class="inline">
+                        <path transform="scale(-1, 1) translate(-20, 0)" d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                        </svg> Go Back</a>
                 <nav class="navbar-responsive-collapse">
                     <ul class="nav navbar-nav pull-right" role="navigation">
                         <li class="dropdown">
@@ -112,62 +123,6 @@
                     <br class="gap visible-lg" />
                 </div>
                 <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
-                <div class="col-xs-12 col-sm-8 col-md-4">
-                    <section class="tile-splash first">
-                        <a href="https://www.joeldombek.com/">
-                            <p>JOEL<strong>DOMBEK</strong> /名前
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="red" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class=""><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
-                            </p>
-                        </a>
-                    </section>
-                    <br class="gap visible-md visible-lg" />
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
-                <div class="col-xs-12 col-sm-8 col-md-4">
-                    <section class="tile-splash">
-                        <a href="https://joeldom.github.io/redesign/">
-                            <p>SITE / <span id="site-term-container" style="">...</span> <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
-                            </p>
-                        </a>
-                    </section>
-                    <br class="gap visible-md visible-lg" />
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
-                <div class="col-xs-12 col-sm-8 col-md-4">
-                    <section class="tile-splash">
-                        <a href="https://joeldom.github.io/resume/">
-                            <p>RESUME / <span id="resume-term-container" style="">...</span> <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
-                            </p>
-                        </a>
-                    </section>
-                    <br class="gap visible-md visible-lg" />
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
-                <div class="col-xs-12 col-sm-8 col-md-4">
-                    <section class="tile-splash">
-                        <a href="https://joeldom.github.io/style-guide/">
-                            <p>STYLE GUIDE / <span id="styleguide-term-container" style="">...</span> <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
-                            </p>
-                        </a>
-                    </section>
-                    <br class="gap visible-md visible-lg" />
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
             </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
@@ -255,6 +210,96 @@
                 </div>
                 <div class="col-xs-12 col-sm-4">&emsp;</div>
             </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="tile-splash">
+                        <a href="https://joeldom.github.io/craftcove/">
+                            <p>
+                                project: CRAFTCOVE <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                            <!-- <img src="img/Parallax_Example.png" /> -->
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="tile-splash">
+                        <a href="./products/">
+                            <p>
+                                project: PRODUCTS <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                            <!-- <img src="img/Parallax_Example.png" /> -->
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="tile-splash">
+                        <a href="https://joeldom.github.io/redesign/sandbox/absolute">
+                            <p>
+                                project: Test 2 <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                            <!-- <img src="img/Parallax_Example.png" /> -->
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="tile-splash">
+                        <a href="https://joeldom.github.io/redesign/sandbox/absolute">
+                            <p>
+                                project: Test 3 <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                            <!-- <img src="img/Parallax_Example.png" /> -->
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="tile-splash">
+                        <a href="https://joeldom.github.io/redesign/sandbox/absolute">
+                            <p>
+                                project: Test 4 <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                            <!-- <img src="img/Parallax_Example.png" /> -->
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
         </div>
         <!-- scroll-pane -->
         <div class="row">
@@ -268,9 +313,9 @@
             <div class="col-xs-12 col-sm-4">&emsp;</div>
             <div class="col-xs-12 col-sm-8 col-sm-pull-2 col-md-8 col-md-pull-2 padding-left-large padding-right-large">
                 <figure class="quote">
-                    <blockquote class="h2" style="text-align: center;">
-                        When ever you want to, you can change everything.
-                    </blockquote>
+                    <span class="h2" style="text-align: center;display: block;">
+                        Various projects
+                    </span>
                 </figure>
                 <button style="display: block; margin: auto;" id="pauseButton">Pause</button>
                 <br class="gap" />
