--- a/sandbox/absolute/index.html
+++ b/sandbox/absolute/index.html
@@ -6,15 +6,15 @@
 
     <title>ABSOLUTE</title>
 
-    <link href="http://joeldom.github.io/redesign/greybox/css/coma.css" rel="stylesheet" />
-    <link href="http://joeldom.github.io/redesign/css/tao.css" rel="stylesheet" />
-    <link href="http://joeldom.github.io/redesign/css/lib.css" rel="stylesheet" />
-    <link href="http://joeldom.github.io/redesign/css/sandbox.css" rel="stylesheet" />
+    <link href="https://joeldom.github.io/redesign/greybox/css/coma.css" rel="stylesheet" />
+    <link href="https://joeldom.github.io/redesign/css/tao.css" rel="stylesheet" />
+    <link href="https://joeldom.github.io/redesign/css/lib.css" rel="stylesheet" />
+    <link href="https://joeldom.github.io/redesign/css/sandbox.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
-    <script src="http://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
-    <script src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
-    <script src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
+    <script src="https://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
+    <script src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
+    <script src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
 </head>
 
 <body class="parallax">
@@ -23,14 +23,14 @@
         <!-- Nav Section sans container -->
         <div id="navbar" class="navbar navbar-fixed-top headroom" role="banner">
             <div class="">
-                <a class="navbar-brand" href="http://www.joeldombek.com/">JOEL<strong>DOMBEK</strong></a>
+                <a class="navbar-brand" href="https://www.joeldombek.com/">JOEL<strong>DOMBEK</strong></a>
                 <nav class="navbar-responsive-collapse">
                     <ul class="nav navbar-nav pull-right" role="navigation">
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="#">Work</a>
                             <ul class="dropdown-menu">
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/work/">All</a>
+                                    <a href="https://www.joeldombek.com/work/">All</a>
                                 </li>
                                 <li class=""><a href="#">Brand</a></li>
                                 <li class=""><a href="#">Web</a></li>
@@ -44,10 +44,10 @@
                             <ul class="dropdown-menu">
                                 <li class=""><a href="#">Quotes</a></li>
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/ideas/inspiration/">Inspiration</a>
+                                    <a href="https://www.joeldombek.com/ideas/inspiration/">Inspiration</a>
                                 </li>
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/blog/">Blog</a>
+                                    <a href="https://www.joeldombek.com/blog/">Blog</a>
                                 </li>
                             </ul>
                         </li>
@@ -59,7 +59,7 @@
                                   <a id="nav-search" href="#"><i class="material-icons">search</i></a>
                               </li> -->
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/about/">About</a>
+                                    <a href="https://www.joeldombek.com/about/">About</a>
                                 </li>
                                 <li class=""><a href="#">How I Work</a></li>
                                 <li class=""><a href="#">Annual Report</a></li>
@@ -67,7 +67,7 @@
                                     <a href="https://joeldom.github.io/resume/">Resume</a>
                                 </li>
                                 <li class="">
-                                    <a href="http://www.joeldombek.com/contact/">Contact</a>
+                                    <a href="https://www.joeldombek.com/contact/">Contact</a>
                                 </li>
                             </ul>
                         </li>
@@ -76,7 +76,7 @@
                 <button type="button" class="navbar-toggle">
             <!-- <span href="#menu" class="trinav"></span> -->
             <span href="#menu" class="ventnav">
-              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+              <svg xmlns="https://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
               <path d="M7.77636 0.797607V8.53684H0.0371094L7.77636 0.797607Z" fill="#C5C5C5"/>
               <path d="M7.77636 9.42798V17.1672H0.0371094L7.77636 9.42798Z" fill="#C5C5C5"/>
               <path d="M7.77636 18.0583V25.7976H0.0371094L7.77636 18.0583Z" fill="#C5C5C5"/>
@@ -113,7 +113,7 @@
                     <section class="tile-splash first">
                         <a href="https://www.joeldombek.com/">
                             <p>JOEL<strong>DOMBEK</strong> /名前
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="red" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class=""><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="red" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class=""><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -127,7 +127,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/">
                             <p>SITE /地点 <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -141,7 +141,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/resume/">
                             <p>RESUME /履歴書 <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -155,7 +155,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/style-guide/">
                             <p>STYLE GUIDE /履歴書 <span class="tile-detail">v2.1.23</span><br>
-                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
                     </section>
@@ -169,7 +169,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/beyond/">
                             <p>
-                                SANDBOX /遊び場 <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                SANDBOX /遊び場 <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
@@ -186,7 +186,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/sandbox/">
                             <p>
-                                project: catalyst <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: catalyst <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
@@ -203,7 +203,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/beyond/">
                             <p>
-                                project: ECCO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: ECCO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                             <!-- <img src="img/Parallax_Example.png" /> -->
@@ -221,7 +221,7 @@
                     <section class="tile-splash tile-last">
                         <a href="https://joeldom.github.io/redesign/sandbox/layers">
                             <p>
-                                project: layer.EXE <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: layer.EXE <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                             <!-- <img src="img/Parallax_Example.png" /> -->
@@ -239,7 +239,7 @@
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/sandbox/absolute">
                             <p>
-                                project: ABSO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                project: ABSO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                             <!-- <img src="img/Parallax_Example.png" /> -->
@@ -280,7 +280,7 @@
                 <footer class="footer" itemscope="" itemtype="https://schema.org/Organization">
                     <span id="back-top">
                       <a href="#top">
-                        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#FFF" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" transform="rotate(-90)" class="inline">
+                        <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#FFF" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" transform="rotate(-90)" class="inline">
                           <path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
                         </svg>
                       </a>
@@ -349,8 +349,8 @@
         </div>
     </div>
     <script src="https://joeldom.github.io/redesign/greybox/js/main.js"></script>
-    <!-- <script src="http://joeldom.github.io/redesign/greybox/js/main.js"></script> -->
-    <script src="http://joeldom.github.io/redesign/js/sandbox.js"></script>
+    <!-- <script src="https://joeldom.github.io/redesign/greybox/js/main.js"></script> -->
+    <script src="https://joeldom.github.io/redesign/js/sandbox.js"></script>
     <!-- SANDBOX Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9GLG41WK0"></script>
     <script>
