--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -348,7 +348,7 @@
             </div>
         </div>
         <!-- scroll-pane -->
-        <div class="row">
+        <div id="data-strings" class="row">
             <div class="col-xs-12 col-sm-4">&emsp;</div>
             <div class="col-xs-12 col-sm-8 col-sm-pull-2 col-md-8 col-md-pull-2 padding-left-large padding-right-large">
                 <br class="gap" />
