--- a/sandbox/packets/index.html
+++ b/sandbox/packets/index.html
@@ -147,7 +147,10 @@
                     <section class="packet">
                         <a href="#">
                             <p>
-                                packet: 01 <span class="tile-detail">v1.1.1</span><br>
+                                packet: 01 <span class="tile-detail">v1.1.1</span><br> simple info
+                            </p>
+                            <p>
+                                more info about packet<br>
                                 <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                             </p>
                         </a>
@@ -347,6 +350,178 @@
                 <div class="col-xs-12 col-sm-4">&emsp;</div>
             </div>
             <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 12 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 13 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 14 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 15 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 16 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 17 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 18 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 19 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+            <!-- packet start -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="packet">
+                        <a href="#">
+                            <p>
+                                packet: 20 <span class="tile-detail">v1.1.1</span><br>
+                                <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="12" height="12" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
+            <!-- packet end -->
+
 
 
 
