--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
             <div class="col-xs-12 col-sm-8 col-md-4">
                 <section class="tile-splash">
-                    <a href="https://joeldom.github.io/redesign/beyond/">
+                    <a href="https://joeldom.github.io/redesign/sandbox/">
                         <p>
                             SANDBOX / <span id="sandbox-term-container" style="">...</span> <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true"
                                 width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
