--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             JOEL<strong>DOMBEK</strong> /名前
                             <!-- <span class="tile-detail">v1.2.17</span> -->
                             <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="red" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="">
-                    <!---->
+    
                     <path
                       d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
                     ></path>
@@ -181,11 +181,9 @@
                             SITE /地点
                             <span class="tile-detail">v2.1.23</span><br>
                             <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline">
-                    <!---->
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
-                    ></path>
-                </p>
+                            <path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z">
+                            </path>
+                        </p>
               </a>
             </section>
             <br class="gap visible-md visible-lg" />
@@ -231,7 +229,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-4">
                     <section class="tile-splash">
                         <a href="https://joeldom.github.io/style-guide/">
-                            <p>STYLE GUIDE / <span id="styleguide-term-container" style="">...</span> <span class="tile-detail">v2.1.23</span><br>
+                            <p>STYLE GUIDE / <span id="styleguide-term-container">...</span> <span class="tile-detail">v2.1.23</span><br>
                                 <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                         </p>
                     </a>
@@ -246,7 +244,7 @@
                 <section class="tile-splash">
                     <a href="https://joeldom.github.io/redesign/sandbox/">
                         <p>
-                            SANDBOX / <span id="sandbox-term-container" style="">...</span> <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true"
+                            SANDBOX / <span id="sandbox-term-container">...</span> <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true"
                                 width="20" height="20" viewBox="0 0 20 20" class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
                         </p>
                     </a>
