--- a/sandbox/packets/index.html
+++ b/sandbox/packets/index.html
@@ -32,12 +32,13 @@
     <script src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
 </head>
 
-<body class="parallax">
+<body id="sandbox" class="parallax">
     <div class="wrapper">
         <a id="top" class="anchor"></a>
         <!-- Nav Section sans container -->
-        <!-- <div id="navbar" class="navbar navbar-fixed-top headroom" role="banner">
+        <div id="navbar" class="navbar navbar-fixed-top headroom" role="banner">
             <div class="">
+                <!-- <a class="navbar-brand" href="https://www.joeldombek.com/">JOEL<strong>DOMBEK</strong></a> -->
                 <a class="navbar-brand" href="https://joeldom.github.io/redesign/">
                     <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="https://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="14" viewBox="0 0 20 20" class="inline">
                         <path transform="scale(-1, 1) translate(-20, 0)" d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
@@ -73,6 +74,9 @@
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="#">Info</a>
                             <ul class="dropdown-menu">
+                                <!-- <li>
+                                  <a id="nav-search" href="#"><i class="material-icons">search</i></a>
+                              </li> -->
                                 <li class="">
                                     <a href="https://www.joeldombek.com/about/">About</a>
                                 </li>
@@ -89,7 +93,7 @@
                     </ul>
                 </nav>
                 <button type="button" class="navbar-toggle">
-            
+            <!-- <span href="#menu" class="trinav"></span> -->
             <span href="#menu" class="ventnav">
               <svg xmlns="https://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
               <path d="M7.77636 0.797607V8.53684H0.0371094L7.77636 0.797607Z" fill="#C5C5C5"/>
@@ -105,7 +109,7 @@
             </span>
           </button>
             </div>
-        </div> -->
+        </div>
         <!-- / Nav Section -->
     </div>
     <!--/wrapper-->
